* ==========================================================================
* OpenAir format suitable for WinPilot and SeeYou
* ==========================================================================
* 2023 August 7 AMG
* ==========================================================================
* DISCLAIMER
* ALWAYS CHECK OFFICIAL AIRSPACE BEFORE FLYING.
* USE AT OWN RISK.
* ALL ELEVATIONS IN FEET.
* Information is not intended for flight navigation and UKK and SNLF is not 
* liable for any errors in these files.
* ==========================================================================
* Information
* ==========================================================================
* This package contains air space files covering Southern Norway in OpenAir
* format suitable for gliding and gliding software  such as WinPilot and
* SeeYou. 
* 
* The information in these files are based on the excellent work of 
* Hans Cato Grytnes  Nils Barkald  Ole Bårdtvedt  Lars Rune Bjørnevik 
* Arne Martin Güettler, Per Morten Løvsland and Agnar Renolen.
* This information collected from in AIP / ENR. Any errors or requests for
* changes and additions should be sendt to arneh@guettler.no.
* 
* Arne Martin Güettler
* arneh@guettler.no
* 
* ==========================================================================
* CONVENTIONS
* ==========================================================================
* 
* - Lower elevations are given in feet as 'ft'
* - Upper elevation are given as flight levels 'FL'
* - The surface elevation is given as 'GND'
* - Traffic Information Zones (TIZ) and Trafic Information Aereas (TIA) are
*   defined as restricted areas (R) though they are formally class G
*   airspace.
* 
* ==========================================================================
* AIRSPORT SECTORS
* ==========================================================================
* 
* Within Oslo  Farris and Flesland TMA as well as Polaris CTA so called 'Airsport sectors' have